<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flashcards</string>
    <string name="action_settings">Settings</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="delete_button">Delete sets</string>
    <string name="download_button">Download sets</string>
    <string name="start_button">START</string>
    <string name="config">Configure your set starting and ending point</string>
    <string name="min">Starting set point: </string>
    <string name="max">Ending set point: </string>
    <string name="select_text">\.\.\.or select a downloaded set</string>
    <string name="min_numb_hint">first page number</string>
    <string name="max_numb_hint">last page number</string>
    <string name="toast_text">You have to choose a set</string>
    <string name="title_activity_flashcard">Flashcard</string>
    <string name="frontText">Krijesnice (Lampyridae) jedna su od porodica u razredu kukaca u koju širom svijeta spada oko 2.000 vrsta.</string>
    <string name="backText">Pojava da živa bića "proizvode" svjetlost naziva se bioluminiscencija. Kod krijesnica se svjetlosni organ nalazi gotovo uvijek u zatku životinje. </string>
    <string name="title_activity_flashcard_categories">FlashcardCategories</string>
    <string name="mainCram">Download sets from server</string>
    <string name="title_activity_cram">Download Flashcards</string>
    <string name="DDeck">Download set</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="question_oceans">Croatia is not in Europe</string>
    <string name="question_mideast">Now you\'re making a WTF face</string>
    <string name="question_africa">light years</string>
    <string name="question_americas">Facepalm</string>
    <string name="question_asia">el gringo</string>
    <string name="title_activity_authorization">Authorization</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_delete_sets">Delete_sets</string>
    <string name="action_poweroff">Power off</string>

</resources>
